# End-to-End-Classifier

./: README.md  pyproject.toml
src/end_to_end_classifier/cli/: data.py  main.py
