[project]
name = "End-to-End-Classifier"
version = "0.1.0"
description = "A brief description of my Python project."
authors = [{name = "Souvik Dey"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.19.2",
    "pydantic",
    "pydantic-settings",
    "pandas",
    
]

[project.scripts]
end_to_end_classifier = "end_to_end_classifier.cli.main:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"